--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build:
     name: Build and Test
@@ -64,3 +68,17 @@ jobs:
 
       - name: Run linter
         run: pnpm lint
+
+  # Auto-merge quando aprovado e CI passa
+  auto-merge:
+    name: Auto Merge
+    runs-on: ubuntu-latest
+    needs: [build, lint]
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Enable auto-merge
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ github.event.pull_request.number }}
+          merge-method: squash
