--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "build-storybook": "turbo run build --filter=@pineapple-ui/docs",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
+    "release": "turbo run build && changeset publish",
+    "generate": "plop"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.10",
+    "plop": "^4.0.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^22.10.0",
