--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 auto-install-peers=true
 strict-peer-dependencies=false
+public-hoist-pattern[]=*storybook*
+public-hoist-pattern[]=*@storybook/*
+shamefully-hoist=true
