--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@pineapple-ui/tsconfig/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
 }
